# atlas-rag

./: .gitignore  README.md
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260720_0001_initial_schema.py  20260720_0002_allow_bootstrap_duplicate_checksums.py  20260721_0003_add_evaluation_jobs.py  20260721_0004_add_uploaded_evaluation_cases.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  errors.py
backend/app/api/v1/: chat.py  documents.py  (+6 more)
backend/app/core/: __init__.py  config.py  ids.py  lifespan.py  logging.py
backend/app/db/: __init__.py  base.py  migrations.py  models.py  session.py
backend/app/schemas/: __init__.py  chat.py  common.py  document.py  evaluation.py  health.py  ingestion.py  system.py
backend/app/services/: __init__.py  artifacts.py  bootstrap.py  chat.py  chunking.py  citation_validator.py  deletions.py  embedding.py  evaluation.py  generation.py  index_coordinator.py  preprocessing.py  prompting.py  retrieval.py  snapshots.py  uploads.py
backend/app/workers/: __init__.py  runner.py
backend/contracts/: api_v1.json  generation_policy.json
backend/experiments/: benchmark_embedding_context.py  calibrate_insufficient_context.py  verify_phase0_contracts.py
backend/scripts/: bootstrap_existing_corpus.py  rebuild_index.py  verify_storage.py
backend/tests/: conftest.py  phase3_support.py
backend/tests/contract/: test_health_system_api.py  test_phase5_chat_api.py  test_phase6_evaluation_api.py
backend/tests/experiments/: conftest.py  test_embedding_context_benchmark.py  test_insufficient_context_calibration.py  test_phase0_contracts.py
backend/tests/integration/: test_database_models.py  test_migrations.py  test_phase2_artifacts.py  test_phase2_bootstrap.py  test_phase3_ingestion.py  test_phase4_deletion_recovery.py  test_phase5_chat.py  test_phase6_evaluation.py  test_phase8_hardening_acceptance.py
backend/tests/unit/: test_chunking_embedding.py  test_config.py  test_ids.py  test_logging.py  test_phase3_ingestion_units.py  test_phase5_chat_units.py  test_phase6_evaluation_units.py
(+60 files in other folders)
