[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "atlas-rag-backend"
version = "0.1.0"
description = "Local, durable FastAPI backend for Atlas RAG"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.16.5,<2",
  "fastapi>=0.116.1,<1",
  "filelock>=3.19.1,<4",
  "openai>=2.8.0,<3",
  "pydantic-settings>=2.10.1,<3",
  "pypdf>=6.0.0,<7",
  "python-docx>=1.2.0,<2",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.43,<3",
  "uvicorn[standard]>=0.35.0,<1",
]

[project.optional-dependencies]
ml = [
  "faiss-cpu>=1.12.0,<2",
  "numpy>=2.2.6,<2.4",
  "sentence-transformers>=5.1.0,<6",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.6,<8",
  "httpx>=0.28.1,<1",
  "mypy>=1.17.1,<2",
  "pytest>=8.4.2,<9",
  "pytest-asyncio>=1.1.0,<2",
  "ruff>=0.12.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
markers = [
  "integration: exercises multiple backend components or durable storage",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["experiments", "tests/experiments"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "LOG", "G", "PIE", "PT", "RET", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
files = ["app", "tests"]
exclude = ["tests/experiments"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faiss", "numpy", "numpy.*", "sentence_transformers", "sentence_transformers.*"]
follow_imports = "skip"
ignore_missing_imports = true
